Add links in program

--- a/program/index.html
+++ b/program/index.html
@@ -44,7 +44,8 @@
     <section class="program-preview">
         <div class="intro"> Мы все хотим жить в счастливом, зеленом, удобном и безопасном городе. Именно таким Петербург мог бы быть уже сейчас. Но на самом деле вокруг себя мы видим другое: десятки, если не сотни однотипных проблем в каждом районе, на каждой улице. И полное отсутствие у городских властей понимания того, как эти проблемы можно было бы решить.</div>
         <div class="sections">
-            <div class="col1">Раздел 1. Видение будущего
+            <div class="col1">
+                <a href="#section1">Раздел 1. Видение будущего</a>
             </div>
             <div class="col2">Раздел 3. Реформа городского управления</div>
             <div class="col3">Раздел 3. Реформа городского управления</div>
@@ -71,7 +72,7 @@
             А в третьем разделе я изложу свой подход к реформе городского управления, реализация которой поможет одновременно и излечить болезни нашего города, и продвинуть его вперёд, максимально близко к идеальному образу.
         </p>
         <p>Разработка программы основывается на трёх ключевых принципах:</p>
-        <h4>1.Учёт интересов всех заинтересованных сторон.</h4>
+        <h4 >1.Учёт интересов всех заинтересованных сторон.</h4>
         <p>Город – крайне сложная структура, особенно такой колоссальный мегаполис как Санкт-Петербург. В нём постоянно сталкиваются интересы разных групп, возникают конфликты. Но если не зацикливаться на противоречиях, а, напротив, находить точки соприкосновения, то конфликт можно обратить в сотрудничество; направив противоборствующие силы в одно русло, превратить губительное противостояние — в синергию.</p>
         <p>
             Для этого необходимо учитывать интересы всех заинтересованных сторон:</p>
@@ -81,14 +82,13 @@
                 <li>экспертов, которые точно знают, как сделать ту или иную сферу жизни Санкт-Петербурга лучше;</li>
                 <li>чиновников и депутатов, которые непосредственно работают над тем, чтобы город функционировал и развивался; видят ситуацию изнутри</li>
             </ul>
-        <h4>2. Прозрачность и диалог.</h4>
+        <h4 >2. Прозрачность и диалог.</h4>
         <p>Успешное функционирование городских структур возможно только тогда, когда все заинтересованные стороны понимают, кто, что и зачем делает. В городском управлении не должно быть тайн. Все предложения должны обсуждаться задолго до принятия решения. Все заинтересованные стороны должны быть готовы к диалогу: чиновники обязаны слышать жителей и бизнесменов, бизнес должен быть готов налаживать взаимодействие с горожанами.</p>
         <p>Без механизмов взаимопонимания и обеспечения прозрачности мы обречены раз за разом заходить в конфликтные тупики.
         </p>
-        <h4>3. Не ломать, а строить.</h4>
+        <h4 i>3. Не ломать, а строить.</h4>
         <p>Если какой-то элемент системы работает хорошо – не надо его трогать! Мы будем улучшать только те процессы, которые работают неэффективно. До тех пор, пока они не станут эффективными.</p>
-        <h3>Раздел 1. Видение будущего
-          </h3>
+        <h3 id="#section1">Раздел 1. Видение будущего</h3>
         <p>Как ни странно, почти все жители Санкт-Петербурга и другие заинтересованные стороны видят идеальное будущее одинаково! Комфорт, улучшение среды проживания, решение инфраструктурных проблем – все мы хотим одного и того же.
         </p>
         <p>Поэтому мы не собираемся изобретать велосипед. За последние годы были подготовлены два документа, подробно описывающие идеальное состояние нашего города – такое, каким мы его видим из сегодняшнего дня:</p>
@@ -141,7 +141,7 @@
             <li>Достижение всех вышеперечисленных целей поможет сделать Санкт-Петербург привлекательным местом для туристов, снизит уровень преступности, улучшит межнациональные и межконфессиональные отношения.
             </li>
         </ol>
-        <h3>Раздел 2. Болевые точки Санкт-Петербурга
+        <h3 id="#section2">Раздел 2. Болевые точки Санкт-Петербурга
                             </h3>
         <p>В течение многих лет мы работали как активисты. За 7 лет существования «Красивого Петербурга» было решено 35 тысяч городских проблем. Однако ещё большее количество бед и неустройств остались: мы просто не в силах были изменить ситуацию, находясь на уровне активистов. Сейчас, когда Красимир Врански заявил о своём выдвижении кандидатом в губернаторы Санкт-Петербурга, у нас появилась возможность собрать и обобщить данные о городских болевых точках. Каждый день мы выезжаем с инспекциями, каждый день общаемся с жителями, освещаем их проблемы в наших трансляциях, постах, обращениях в органы власти и правоохранительные органы. Всё, что нам рассказывают, мы добавляем в свою информационную базу.
         </p>
@@ -172,7 +172,7 @@
         В пригородных районах - Кронштадтском, Колпинском, Курортном, Петродворцовом, Пушкинском - из инфраструктурных проблем больше всего беспокоят жителей дороги (15), школы (8), общественный транспорт (8). Много экологических проблем (21), из которых острее всего стоит проблема самовольных свалок мусора (5). Также распространены проблемы, связанные с ремонтом зданий (10).
         </p>
         <p><a href="https://docs.google.com/document/d/1BsXUuRoXYohsTTt9dlehVIkDcBDeBh0IljzBw0BWb5g/edit?usp=sharing" target="_blank">Сводная таблица</a></p>
-        <h3>Раздел 3. Реформа городского управления</h3>
+        <h3 id="#section3">Раздел 3. Реформа городского управления</h3>
         <h4>Анализ текущего состояния городского управления</h4>
         <p>Конечно, вам уже бросился в глаза колоссальный разрыв между идеальным Санкт-Петербургом, который мы все хотим видеть, описанным в Разделе 1, – и реальным положением дел, показанным в Разделе 2: огромное число петербуржцев живёт в ужасающих, неприемлемых или просто трудных условиях. Наверное, по пальцам можно пересчитать тех горожан, у которых не было бы никаких коммунальных или социальных неприятностей. А ведь большинство пунктов, которые мы включили в Раздел «Видение будущего», взяты из Стратегий 2030 и 2035 – разработанных под эгидой городского руководства и им же официально принятых в исполнение.
         </p>
@@ -321,8 +321,7 @@
             </ol>
         <p><b>Наша ключевая мысль заключается в том, что для воплощения в жизнь идеального видения будущего необходимо кардинальное изменение системы городского управления. Только так мы сможем решить главную проблему: наличие бюрократических препон на каждом уровне, непрозрачность самой власти и схемы принятия ею решений. Без реформы управления невозможно никакое дальнейшее развитие города.</b></p>
         </p>
-        <h3>Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти
-                    </h3>
+        <h3 id="#section4">Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</h3>
         <p>В этом разделе мы пробуем заглянуть внутрь тех конкретных проблем, которые изнуряют жителей Санкт-Петербурга, ухудшают качество их жизни, подчас превращая последнюю в кошмар.
         </p>
         <p>В Российской Федерации действует Конституция, множество федеральных и региональных законов, санитарных норм, строительных правил, государственных стандартов и т.д. Подавляющее большинство этих документов описывают то, какой должна быть наша жизнь, в очень хорошем свете. Если верить нашим законам, то все мы должны жить в комфортной среде, иметь хорошую зарплату (если, конечно, делаем хорошую работу), повсеместно наслаждаться целыми квадратными километрами зелёных садов и парков, ездить по своевременно ремонтируемым дорогам, а дети наши должны ходить по чистым тротуарам в детские сады и учиться в школах в шаговой доступности от тихих, просторных, тёплых и светлых домов.</p>
