--- a/program/index.html
+++ b/program/index.html
@@ -47,9 +47,10 @@
             <div class="col1">
                 <a href="#section1">Раздел 1. Видение будущего</a>
             </div>
-            <div class="col2">Раздел 3. Реформа городского управления</div>
-            <div class="col3">Раздел 3. Реформа городского управления</div>
-            <div class="col4">Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</div>
+            <div class="col2">
+                <a href="#section2">Раздел 2. Реформа городского управления</a></div>
+            <div class="col3"><a href="#section3">Раздел 3. Реформа городского управления</a></div>
+            <div class="col4"><a href="#section3"></a>Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</a></div>
         </div>
        
     </section>
@@ -88,7 +89,7 @@
         </p>
         <h4 i>3. Не ломать, а строить.</h4>
         <p>Если какой-то элемент системы работает хорошо – не надо его трогать! Мы будем улучшать только те процессы, которые работают неэффективно. До тех пор, пока они не станут эффективными.</p>
-        <h3 id="#section1">Раздел 1. Видение будущего</h3>
+        <h3 id="section1">Раздел 1. Видение будущего</h3>
         <p>Как ни странно, почти все жители Санкт-Петербурга и другие заинтересованные стороны видят идеальное будущее одинаково! Комфорт, улучшение среды проживания, решение инфраструктурных проблем – все мы хотим одного и того же.
         </p>
         <p>Поэтому мы не собираемся изобретать велосипед. За последние годы были подготовлены два документа, подробно описывающие идеальное состояние нашего города – такое, каким мы его видим из сегодняшнего дня:</p>
@@ -321,7 +322,7 @@
             </ol>
         <p><b>Наша ключевая мысль заключается в том, что для воплощения в жизнь идеального видения будущего необходимо кардинальное изменение системы городского управления. Только так мы сможем решить главную проблему: наличие бюрократических препон на каждом уровне, непрозрачность самой власти и схемы принятия ею решений. Без реформы управления невозможно никакое дальнейшее развитие города.</b></p>
         </p>
-        <h3 id="#section4">Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</h3>
+        <h3 id="section4">Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</h3>
         <p>В этом разделе мы пробуем заглянуть внутрь тех конкретных проблем, которые изнуряют жителей Санкт-Петербурга, ухудшают качество их жизни, подчас превращая последнюю в кошмар.
         </p>
         <p>В Российской Федерации действует Конституция, множество федеральных и региональных законов, санитарных норм, строительных правил, государственных стандартов и т.д. Подавляющее большинство этих документов описывают то, какой должна быть наша жизнь, в очень хорошем свете. Если верить нашим законам, то все мы должны жить в комфортной среде, иметь хорошую зарплату (если, конечно, делаем хорошую работу), повсеместно наслаждаться целыми квадратными километрами зелёных садов и парков, ездить по своевременно ремонтируемым дорогам, а дети наши должны ходить по чистым тротуарам в детские сады и учиться в школах в шаговой доступности от тихих, просторных, тёплых и светлых домов.</p>
