Update meta image

--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../styles/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/swiper.css" />
-    <meta property="og:image" content="./images/main.jpeg" />
+    <meta property="og:image" content="https://красимир.рф/images/main.jpeg" />
     <script src="../js/swiper.min.js"></script>
     <title>
       Кандидат в Губернаторы Санкт-Петербурга Красимир Врански | О кандидате
