Add footer button to all pages

--- a/about/index.html
+++ b/about/index.html
@@ -144,6 +144,11 @@
           >vranski.team@gmail.com</a
         >
       </section>
+      <section>
+          <div class="call-to-action">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Я хочу поддержать Красимира</a>
+          </div>
+      </section>
       <nav class="socials">
         <a href="https://vk.com/vranski_team">
           <svg
