--- a/manifest/index.html
+++ b/manifest/index.html
@@ -148,6 +148,11 @@
         <section>
             Написать сообщение Красимиру Врански — <a href="mailto:vranski.team@gmail.com" target="_blank">vranski.team@gmail.com</a>
         </section>
+        <section>
+            <div class="call-to-action">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Я хочу поддержать Красимира</a>
+            </div>
+        </section>
         <nav class="socials">
             <a href="https://vk.com/vranski_team">
                 <svg role="img" viewBox="0 0 24 24" width="48" height="48" xmlns="http://www.w3.org/2000/svg">
