--- a/program/index.html
+++ b/program/index.html
@@ -52,7 +52,7 @@
             <div class="col3"><a href="#section3">Раздел 3. Реформа городского управления</a></div>
             <div class="col4"><a href="#section3"></a>Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</a></div>
         </div>
-       
+
     </section>
     <section id="program">
         <h2>
@@ -500,6 +500,11 @@
     <footer>
         <section>
             Написать сообщение Красимиру Врански — <a href="mailto:vranski.team@gmail.com" target="_blank">vranski.team@gmail.com</a>
+        </section>
+        <section>
+            <div class="call-to-action">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Я хочу поддержать Красимира</a>
+            </div>
         </section>
         <nav class="socials">
             <a href="https://vk.com/vranski_team">
