--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         >
       </section>
       <section>
-        <div class="call-to-action" style="margin: 1rem 0;">
+        <div class="call-to-action">
           <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Я хочу поддержать Красимира</a>
         </div>
       </section>
