Fix link in program

--- a/program/index.html
+++ b/program/index.html
@@ -50,7 +50,7 @@
             <div class="col2">
                 <a href="#section2">Раздел 2. Реформа городского управления</a></div>
             <div class="col3"><a href="#section3">Раздел 3. Реформа городского управления</a></div>
-            <div class="col4"><a href="#section4"></a>Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</a></div>
+            <div class="col4"><a href="#section4">Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</a></div>
         </div>
 
     </section>
