Fix link in program

--- a/program/index.html
+++ b/program/index.html
@@ -142,7 +142,7 @@
             <li>Достижение всех вышеперечисленных целей поможет сделать Санкт-Петербург привлекательным местом для туристов, снизит уровень преступности, улучшит межнациональные и межконфессиональные отношения.
             </li>
         </ol>
-        <h3 id="#section2">Раздел 2. Болевые точки Санкт-Петербурга
+        <h3 id="section2">Раздел 2. Болевые точки Санкт-Петербурга
                             </h3>
         <p>В течение многих лет мы работали как активисты. За 7 лет существования «Красивого Петербурга» было решено 35 тысяч городских проблем. Однако ещё большее количество бед и неустройств остались: мы просто не в силах были изменить ситуацию, находясь на уровне активистов. Сейчас, когда Красимир Врански заявил о своём выдвижении кандидатом в губернаторы Санкт-Петербурга, у нас появилась возможность собрать и обобщить данные о городских болевых точках. Каждый день мы выезжаем с инспекциями, каждый день общаемся с жителями, освещаем их проблемы в наших трансляциях, постах, обращениях в органы власти и правоохранительные органы. Всё, что нам рассказывают, мы добавляем в свою информационную базу.
         </p>
@@ -173,7 +173,7 @@
         В пригородных районах - Кронштадтском, Колпинском, Курортном, Петродворцовом, Пушкинском - из инфраструктурных проблем больше всего беспокоят жителей дороги (15), школы (8), общественный транспорт (8). Много экологических проблем (21), из которых острее всего стоит проблема самовольных свалок мусора (5). Также распространены проблемы, связанные с ремонтом зданий (10).
         </p>
         <p><a href="https://docs.google.com/document/d/1BsXUuRoXYohsTTt9dlehVIkDcBDeBh0IljzBw0BWb5g/edit?usp=sharing" target="_blank">Сводная таблица</a></p>
-        <h3 id="#section3">Раздел 3. Реформа городского управления</h3>
+        <h3 id="section3">Раздел 3. Реформа городского управления</h3>
         <h4>Анализ текущего состояния городского управления</h4>
         <p>Конечно, вам уже бросился в глаза колоссальный разрыв между идеальным Санкт-Петербургом, который мы все хотим видеть, описанным в Разделе 1, – и реальным положением дел, показанным в Разделе 2: огромное число петербуржцев живёт в ужасающих, неприемлемых или просто трудных условиях. Наверное, по пальцам можно пересчитать тех горожан, у которых не было бы никаких коммунальных или социальных неприятностей. А ведь большинство пунктов, которые мы включили в Раздел «Видение будущего», взяты из Стратегий 2030 и 2035 – разработанных под эгидой городского руководства и им же официально принятых в исполнение.
         </p>
