--- a/manifest/index.html
+++ b/manifest/index.html
@@ -99,11 +99,7 @@
 
                 </li>
                 <li>
-                    сделаю обязательным широкое общественное обсуждение каждого нового проекта
-                </li>
-                <li>
-                    до того, как будет принято решение о его запуске или закрытии;
-
+                    сделаю обязательным широкое общественное обсуждение каждого нового проекта до того, как будет принято решение о его запуске или закрытии;
                 </li>
                 <li>
                     раскрою схемы принятия решений, важных для горожан и бизнеса, чтобы они были прозрачны и визуализированы;
