--- a/program/index.html
+++ b/program/index.html
@@ -42,7 +42,8 @@
         </nav>
     </header>
     <section class="program-preview">
-        <div class="intro"> Мы все хотим жить в счастливом, зеленом, удобном и безопасном городе. Именно таким Петербург мог бы быть уже сейчас. Но на самом деле вокруг себя мы видим другое: десятки, если не сотни однотипных проблем в каждом районе, на каждой улице. И полное отсутствие у городских властей понимания того, как эти проблемы можно было бы решить.</div>
+        <div class="intro"> Все пункты и разделы данной программы могут обсуждаться, мы готовы рассмотреть любые предложения по её изменению или расширению. Приглашаем жителей Санкт-Петербурга, экспертов, бизнес-сообщество, политические партии, депутатов всех уровней и действующую администрацию города к обсуждению предложенного проекта программы. Если вы знаете, как решить какую-то городскую проблему - сообщайте нам об этом. Давайте вместе делать Петербург тем городом мечты, каким мы все хотим его видеть!
+        </div>
         <div class="sections">
             <div class="col1">
                 <a href="#section1">Раздел 1. Видение будущего</a>
@@ -64,13 +65,15 @@
             Мы все хотим жить в счастливом, зеленом, удобном и безопасном городе. Именно таким Петербург мог бы быть уже сейчас. Но на самом деле вокруг себя мы видим другое: десятки, если не сотни однотипных проблем в каждом районе, на каждой улице. И полное отсутствие у городских властей понимания того, как эти проблемы можно было бы решить.
         </p>
         <p>
-            Поэтому моя предвыборная программа состоит из трёх разделов. В первом я расскажу об идеальном видении будущего нашего города, которое разделяет большинство петербуржцев, экспертов, чиновников и бизнесменов.
+            Поэтому моя предвыборная программа состоит из четырёх разделов. В первом я расскажу об идеальном видении будущего нашего города, которое разделяет большинство петербуржцев, экспертов, чиновников и бизнесменов.
         </p>
         <p>
             Во втором я представлю анализ текущих городских проблем на основе реально существующих конфликтов – «болевых точек» Петербурга.
         </p>
         <p>
-            А в третьем разделе я изложу свой подход к реформе городского управления, реализация которой поможет одновременно и излечить болезни нашего города, и продвинуть его вперёд, максимально близко к идеальному образу.
+            В третьем разделе я изложу свой подход к реформе городского управления, реализация которой поможет одновременно и излечить болезни нашего города, и продвинуть его вперёд, максимально близко к идеальному образу.
+        </p>
+        <p>Четвёртый раздел Программы содержит конкретные предложения по внесению изменений в нормативные документы исполнительных органов государственной власти. Это те решения, которые можно реализовать уже сейчас, не откладывая в долгий ящик.
         </p>
         <p>Разработка программы основывается на трёх ключевых принципах:</p>
         <h4 >1.Учёт интересов всех заинтересованных сторон.</h4>
@@ -106,7 +109,7 @@
             </li>
             <li>Санкт-Петербург – зелёный город, с большим числом скверов и парков. Зелёные участки не должны застраиваться, наоборот, город должен выделять новые территории, особенно поблизости от центра, под новые парки и прогулочные зоны. На уже существующих участках деревьев должно становиться больше, а не меньше.
             </li>
-            <li>Город с развитой системой общественного транспорта: метро, электрички, легкорельс, троллейбусы и автобусы – всё должно быть связано в единую, понятную и удобную сеть. Перемещение должно быть быстрым, в городе не должно остаться ни одной территории с плохой транспортной доступностью.
+            <li>Город с развитой системой общественного транспорта: метро, электрички, легкорельс, водный транспорт, троллейбусы и автобусы – всё должно быть связано в единую, понятную и удобную сеть. Перемещение должно быть быстрым, в городе не должно остаться ни одной территории с плохой транспортной доступностью.
             </li>
             <li>Вывод личного автомобильного транспорта из центра города. Центр нужно сделать более удобным и приятным для пешеходов и велосипедистов. Необходимо развивать велоинфраструктуру как альтернативу личному автотранспорту. Также необходимо создать доступную сеть водного транспорта в акватории Невы и Финского залива</li>
             <li>Одним из приоритетов в городском планировании должно быть создание общественных пространств: мест, где удобно и приятно гулять, встречаться, общаться, работать или просто проводить время. В каждом сложившемся микрорайоне должен появиться свой досуговый центр (возможно, на базе библиотеки): место, где люди могли бы знакомиться, обсуждать какие-либо насущные вопросы, просто проводить время.
@@ -323,6 +326,8 @@
         <p><b>Наша ключевая мысль заключается в том, что для воплощения в жизнь идеального видения будущего необходимо кардинальное изменение системы городского управления. Только так мы сможем решить главную проблему: наличие бюрократических препон на каждом уровне, непрозрачность самой власти и схемы принятия ею решений. Без реформы управления невозможно никакое дальнейшее развитие города.</b></p>
         </p>
         <h3 id="section4">Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</h3>
+        <p><em>Раздел постоянно находится в разработке – новые идеи мы будем выкладывать по мере готовности
+        </em></p>
         <p>В этом разделе мы пробуем заглянуть внутрь тех конкретных проблем, которые изнуряют жителей Санкт-Петербурга, ухудшают качество их жизни, подчас превращая последнюю в кошмар.
         </p>
         <p>В Российской Федерации действует Конституция, множество федеральных и региональных законов, санитарных норм, строительных правил, государственных стандартов и т.д. Подавляющее большинство этих документов описывают то, какой должна быть наша жизнь, в очень хорошем свете. Если верить нашим законам, то все мы должны жить в комфортной среде, иметь хорошую зарплату (если, конечно, делаем хорошую работу), повсеместно наслаждаться целыми квадратными километрами зелёных садов и парков, ездить по своевременно ремонтируемым дорогам, а дети наши должны ходить по чистым тротуарам в детские сады и учиться в школах в шаговой доступности от тихих, просторных, тёплых и светлых домов.</p>
@@ -403,7 +408,6 @@
         <p>Итак, мы предлагаем:</p>
         <p style="padding-left: 3rem;"><b>Перенести абзац “обращаться в суд с заявлениями об аннулировании лицензии в отношении лицензиата на основании решения лицензионной комиссии” из подраздела “Должностные лица Инспекции в порядке, установленном законодательством Российской Федерации, при осуществлении лицензионного контроля имеют право” в подраздел “Должностные лица Инспекции в порядке, установленном законодательством Российской Федерации, при осуществлении лицензионного контроля обязаны” (в п. 1.7. Распоряжения от 9 августа 2017 года N 25-р «Об утверждении административного регламента Государственной жилищной инспекции Санкт-Петербурга по исполнению государственной функции по осуществлению лицензионного контроля за осуществлением деятельности по управлению многоквартирными домами»).</b></p>
         <p>Предложенные в подразделе 4.1 настоящей Программы изменения вряд ли решат все проблемы ЖКХ, и вряд ли сделают это мгновенно. Например, в дальнейшем можно будет заняться порядком формирования и работы лицензионных комиссий. Однако то, что мы предлагаем - это реальные изменения, с которых мы можем начать прямо сейчас, на старте. Если что-то не будет работать, или будет работать плохо - будем изменять дальше. Вместе с вами!</p>
-        <p><b>Все пункты и разделы данной программы могут обсуждаться, мы готовы рассмотреть любые предложения по её изменению или расширению. Приглашаем жителей Санкт-Петербурга, экспертов, бизнес-сообщество, политические партии, депутатов всех уровней и действующую администрацию города к обсуждению предложенного проекта программы. Если вы знаете, как решить какую-то городскую проблему - сообщайте нам об этом. Давайте вместе делать Петербург тем городом мечты, каким мы все хотим его видеть!</b></p>
 
         <h2>Приложение 1</h2>
         <p><a href="https://docs.google.com/spreadsheets/d/1B2VoKvoUUDtTmrLyWJBRKKi--10btj38D_jv7rJn4mM/edit?usp=sharing">Список болевых точек Санкт-Петербурга</a></p>
