Update program page

--- a/program/index.html
+++ b/program/index.html
@@ -49,7 +49,7 @@
                 <a href="#section1">Раздел 1. Видение будущего</a>
             </div>
             <div class="col2">
-                <a href="#section2">Раздел 2. Реформа городского управления</a></div>
+                <a href="#section2">Раздел 2. Болевые точки Санкт-Петербурга</a></div>
             <div class="col3"><a href="#section3">Раздел 3. Реформа городского управления</a></div>
             <div class="col4"><a href="#section4">Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти</a></div>
         </div>
@@ -487,7 +487,6 @@
                     <li>Предоставление помещения для проведения общего собрания в дату и время, установленные по договорённости с заявителем. В качестве помещения может использоваться помещение в здании Администрации, либо любое другое помещение, находящееся в распоряжении Администрации, располагающее достаточным количеством посадочных мест для проведения общего собрания и располагающееся дистанционно ближе к многоквартирному дому, чем здание Администрации.</li>
                     <li>Представитель Администрации наблюдает за проведением общего собрания.</li>
                     <li>По приглашению заявителя, представитель Администрации может участвовать в проведении общего собрания в качестве председателя, секретаря, члена счётной комиссии общего собрания, в случае, если за это проголосует большинство участников общего собрания. Также заявитель может пригласить иных представителей Администрации исполнять функции председателя, секретаря, членов счётной комиссии, в случае, если за это проголосует большинство участников общего собрания.</li>
-                    <li>Представитель Администрации наблюдает за проведением общего собрания.</li>
                     <li>По приглашению заявителя, представитель Администрации во время проведения общего собрания может давать общему собранию консультации по вопросам разъяснения Конституции, федеральных законов, иных нормативных актов.</li>
                     <li>Составление бюллетеней для голосования собственников по вопросам, включённым в повестку дня общего собрания; предоставление стандартной формы бюллетеня в электронном или бумажном виде для собственного изготовления за счёт заявителя.</li>
                     <li>Распечатка бюллетеней для голосования собственников по вопросам, включённым в повестку дня общего собрания, в необходимом для проведения собрания количестве. Данная форма содействия является возмездной и оплачивается заявителем по тарифу, установленному Администрацией района.</li>
