Update program page

--- a/program/index.html
+++ b/program/index.html
@@ -204,17 +204,14 @@
         <p>Системе городской власти необходим жёсткий аудит. На данном этапе провести его невозможно в связи с закрытостью системы. Однако, заняв губернаторский пост, Красимир Врански получит возможность проанализировать работу системы и представить результаты на суд общественности.</p>
         <p>Следуя принципу «не ломать, а строить», мы будем бережно подходить к реформам и внедрять изменения только там, где они действительно нужны. Если окажется, что какие-то структуры работают удовлетворительно – лучше их вообще не трогать; по крайней мере, до тех пор, пока есть что улучшать в других структурах, которые никуда не годятся.
         </p>
-        <h4>Предложения по реформированию городского управления
-                            </h4>
-        <p>Чтобы исправить ситуацию с городским управлением, мы предлагаем провести двухступенчатую схему реформ. Она позволит вводить изменения постепенно, продумывая и прорабатывая каждый следующий шаг, обсуждая уже проведённые изменения с горожанами и экспертами. Главное достоинство этой схемы – её возможность изменяться в процессе, приноравливаясь к новым вызовам. Изменять и улучшать её мы начнём прямо сейчас, после первой публикации настоящей Программы. Мы будем рассматривать все предложения по изменению и улучшению Программы в целом и её частей от жителей Санкт-Петербурга, экспертного сообщества, бизнесменов и, конечно же, самих чиновников. А затем - интегрировать ваши советы в состав Программы.
-        </p>
-        <h5>Первая стадия реформирования городского управления: антикризисная
-                                  </h5>
+        <h4>Предложения по реформированию городского управления</h4>
+        <p>Чтобы исправить ситуацию с городским управлением, мы предлагаем провести двухступенчатую схему реформ. Она позволит вводить изменения постепенно, продумывая и прорабатывая каждый следующий шаг, обсуждая уже проведённые изменения с горожанами и экспертами. Главное достоинство этой схемы – её возможность изменяться в процессе, приноравливаясь к новым вызовам. Изменять и улучшать её мы начнём прямо сейчас, после первой публикации настоящей Программы. Мы будем рассматривать все предложения по изменению и улучшению Программы в целом и её частей от жителей Санкт-Петербурга, экспертного сообщества, бизнесменов и, конечно же, самих чиновников. А затем - интегрировать ваши советы в состав Программы.</p>
+        <h5>Первая стадия реформирования городского управления: антикризисная</h5>
         <p>Первая стадия реформы городского управления состоит из трёх элементов:
             <ol>
                 <li>Укрупнение муниципальных округов и передача им функций административных районов, которые сейчас входят в систему исполнительных органов государственной власти. Возможны два варианта выстраивания такой системы:
                     <ol>
-                        <li>Одноуровневая система муниципальный округов: большинство муниципалитетов укрупняются до размера современного административного района, в каждом округе происходят выборы относительно небольшого числа муниципальных депутатов (20 на район), таким образом общее число </li>
+                        <li>Одноуровневая система муниципальный округов: большинство муниципалитетов укрупняются до размера современного административного района, в каждом округе происходят выборы относительно небольшого числа муниципальных депутатов (20 на район), таким образом общее число муниципальных депутатов в Санкт-Петербурге сократится примерно в 4-5 раз.</li>
                         <li>Создание двухуровневой системы муниципальных округов: при сохранении или небольшом укрупнении существующих муниципальных округов, депутаты местных советов будут назначать не только главу администрации собственного муниципального образования (как сейчас), но и главу муниципального района. В любом случае в рамках реформы предполагается выделение муниципальных округов для городских анклавов (обособленных территорий, отделённых от общего массива городской застройки, имеющих сложившуюся структуру и собственную историю): так, чтобы на каждый отдельный посёлок в рамках петербургской агломерации приходился собственный муниципальный совет, избираемый только жителями этого посёлка.
                         </li>
                     </ol>
