Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -98,7 +98,7 @@
       <p>
         В 2012 году занялся общественной деятельностью, начав с наблюдения на
         выборах в Санкт-Петербурге; позже участвовал в наблюдении за выборами в
-        разных городах, от Омска до Жироны (Франция).
+        разных городах, от Омска до Жироны (Испания).
       </p>
       <p>
         В 2012 году основал движение «Красивый Петербург» для решения проблем
