Add vk:image meta

--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/swiper.css" />
     <meta property="og:image" content="https://красимир.рф/images/main.jpeg" />
+    <meta property="vk:image" content="https://красимир.рф/images/main.jpeg" />
     <script src="../js/swiper.min.js"></script>
     <title>
       Кандидат в Губернаторы Санкт-Петербурга Красимир Врански | О кандидате
@@ -145,9 +146,13 @@
         >
       </section>
       <section>
-          <div class="call-to-action">
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Я хочу поддержать Красимира</a>
-          </div>
+        <div class="call-to-action">
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform"
+            target="_blank"
+            >Я хочу поддержать Красимира</a
+          >
+        </div>
       </section>
       <nav class="socials">
         <a href="https://vk.com/vranski_team">
