--- a/manifest/index.html
+++ b/manifest/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/swiper.css" />
     <script src="../js/swiper.min.js"></script>
     <meta property="og:image" content="https://красимир.рф/images/main.jpeg" />
+    <meta property="vk:image" content="https://красимир.рф/images/main.jpeg" />
     <title>
         Кандидат в Губернаторы Санкт-Петербурга Красимир Врански | Манифест
     </title>
