--- a/results/index.html
+++ b/results/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles/swiper.css" />
     <script src="../js/swiper.min.js"></script>
     <meta property="og:image" content="https://красимир.рф/images/main.jpeg" />
+    <meta property="vk:image" content="https://красимир.рф/images/main.jpeg" />
     <title>
       Кандидат в Губернаторы Санкт-Петербурга Красимир Врански | Результаты
     </title>
@@ -59,9 +60,13 @@
         >
       </section>
       <section>
-          <div class="call-to-action">
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform" target="_blank">Я хочу поддержать Красимира</a>
-          </div>
+        <div class="call-to-action">
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSccHoR92TaDULUAHfR9J2Ahiww1rk5OMXx90q2pz_YqXZdVDQ/viewform"
+            target="_blank"
+            >Я хочу поддержать Красимира</a
+          >
+        </div>
       </section>
       <nav class="socials">
         <a href="https://vk.com/vranski_team">
