--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./styles/main.css?v1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/swiper.css" />
+    <meta property="og:url" content="https://красимир.рф/" />
     <meta property="og:image" content="https://красимир.рф/images/main.jpeg" />
     <meta property="vk:image" content="https://красимир.рф/images/main.jpeg" />
     <script src="./js/swiper.min.js"></script>
