--- a/results/index.html
+++ b/results/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/swiper.css" />
     <script src="../js/swiper.min.js"></script>
+    <meta property="og:url" content="https://красимир.рф/" />
     <meta property="og:image" content="https://красимир.рф/images/main.jpeg" />
     <meta property="vk:image" content="https://красимир.рф/images/main.jpeg" />
     <title>
