--- a/program/index.html
+++ b/program/index.html
@@ -269,7 +269,7 @@
             <ol>
                 <li><strong>Координация и надзор.</strong>
                     <ol>
-                        <li>Губернатор и аппарат губернатора – осуществляет представительские, надзорные функции и общее руководство.
+                        <li>Губернатор и аппарат губернатора – осуществляет представительские, надзорные функции и общее число руководство.
                         </li>
                         <li>Комитет по законности противодействию коррупции – осуществляет контроль над деятельностью всех структур городской власти.
                         </li>
