--- a/program/index.html
+++ b/program/index.html
@@ -416,7 +416,7 @@
         ПОСТАНОВЛЕНИЕ<br/>
         <i>проект</i><br/>
         Об утверждении Положения о порядке организации содействия проведению общих собраний собственников помещений в многоквартирных домах Администрациями районов Санкт-Петербурга</h4>
-        <p>В целях реализации Правительство Санкт-Петербурга</p>
+        <p>В целях реализации ст. 161.1 Жилищного Кодекса Российской Федерации Правительство Санкт-Петербурга</p>
         <p>постановляет:</p>
         <ol>
             <li>Утвердить Положение о порядке организации содействия проведению общих собраний собственников помещений в многоквартирных домах Администрациями районов Санкт-Петербурга (далее – Положение).</li>
