--- a/about/index.html
+++ b/about/index.html
@@ -137,6 +137,7 @@
         и по борьбе с незаконной торговлей. Проведены десятки рейдов по
         выявлению и пресечению незаконной и опасной торговли.
       </p>
+      <a href="bio.html">Полная версия биографии</a>
     </section>
 
     <footer>
