--- a/program/index.html
+++ b/program/index.html
@@ -276,7 +276,7 @@
                     </ol>
                 </li>
                 <li>
-                    Структуры, отвечающие за планирование.
+                    <strong>Структуры, отвечающие за планирование.</strong>
                     <ol>
                         <li>Комитет обработки первичной информации – единая точка входа для всех, кто желает участвовать в развитии города: сюда свои предложения подают граждане, инвесторы, органы государственной власти, депутаты. Здесь информация обрабатывается и распределяется для дальнейшей работы; сотрудники этого комитета сопровождают инвестиционные и гражданские проекты на всём протяжении от их первичной оценки до реализации.</li>
                         <li>Комитет городского планирования – отвечает за разработку генплана, проектов землепользования и застройки, проектов планировки территории. Здесь происходит формирование представления о назначении каждой отдельной территории, осмысление их связей друг с другом, проектирование транспортной инфраструктуры. Комитет осуществляет составление адресных программ в рамках своей компетенции.</li>
